# file-organizer

./: README.md  main.py  pyproject.toml  requirments.txt  todo.md
docs/: architecture.md  dependencies.md  developer_docs.md  installation_guide.md  plugin_development_guide.md  requirements.md  user_manual.md
plugins/: example_workflow.yaml  logger_plugin.py
src/: duplicate_detector.py  file_analyzer.py  file_manager.py  file_organizer.py  plugin_system.py  smart_file_manager.py
src/ui/: duplicate_finder.py  file_organizer.py  file_preview.py  main_window.py
tests/: test_core_modules.py  test_file_types.py  test_integration.py  test_plugin_system.py
