[tool.poetry]
name = "file-organizer"
version = "0.1.0"
description = "KI-basierte Dateiverwaltungsanwendung"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
PyQt6 = "^6.5.0"
SQLAlchemy = "^2.0.0"
python-magic = "^0.4.27"
Whoosh = "^2.7.4"
PyYAML = "^6.0"
pluggy = "^1.0.0"
Pillow = "^10.0.0"
PyPDF2 = "^3.0.0"
python-docx = "^1.0.0"
pandas = "^2.0.0"
openpyxl = "^3.1.0"
chardet = "^5.1.0"
pygments = "^2.15.0"
pyzipper = "^0.3.6"
tqdm = "^4.65.0"
appdirs = "^1.4.4"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
rich = "^13.3.5"
watchdog = "^3.0.0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.3.0"
sphinx = "^7.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
